--- a/src/app/index.css
+++ b/src/app/index.css
@@ -2,3 +2,10 @@ body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
